[package]
name = "yo"
version = "1.1.8"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "A multi-functional command-line tool with GitHub SSH key management and SOCKS5 proxy"

# 主程序
[[bin]]
name = "yo"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
# HTTP client for API requests (use rustls instead of openssl)
# Keep blocking for compatibility with existing sync code
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"], default-features = false }
# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Crypto dependencies (pure Rust, no OpenSSL)
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
sha2 = "0.10"
rand = "0.8"
base64 = "0.21"
block-padding = "0.3"
# Terminal colors
colored = "2.0"
# Regex support
regex = "1.10"
# Error handling
anyhow = "1.0"
thiserror = "1.0"
# Network utilities
socket2 = "0.5"
# System utilities
hostname = "0.3"
chrono = { version = "0.4", features = ["serde"] }
# Audio playback
rodio = "0.17"
# Lazy static for global state
lazy_static = "1.4"
# Interactive prompts
inquire = "0.7"
# Directory walking
walkdir = "2.4"

[target.'cfg(windows)'.dependencies]
# Windows API for session monitoring
windows = { version = "0.52", features = [
    "Win32_System_RemoteDesktop",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_ToolHelp"
] }

[profile.release]
opt-level = 3
lto = true
strip = true
