[package]
name = "yo"
version = "1.1.32"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "A multi-functional command-line tool with GitHub SSH key management and SOCKS5 proxy"

# Shared library
[lib]
name = "yo_lib"
path = "src/lib.rs"

# Binary: Main entry point (Windows) - supports "yo run auto" syntax
[[bin]]
name = "yo"
path = "src/bin/yo_auto.rs"

# Binary: GitHub SSH key management (Linux musl)
[[bin]]
name = "yo-git"
path = "src/bin/yo_git.rs"

# Binary: SOCKS5 proxy service (Linux musl)
[[bin]]
name = "yo-s5"
path = "src/bin/yo_s5.rs"

# Binary: File utilities (Linux musl)
[[bin]]
name = "yo-file"
path = "src/bin/yo_file.rs"

# Binary: OceanBase environment tool (Linux musl)
[[bin]]
name = "yo-ob"
path = "src/bin/yo_ob.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
# HTTP client for API requests (use rustls instead of openssl)
reqwest = { version = "0.13", features = ["blocking", "json", "rustls", "gzip"], default-features = false }
# Web framework
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }
# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Crypto dependencies (pure Rust, no OpenSSL)
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
sha2 = "0.10"
rand = "0.9"
base64 = "0.22"
block-padding = "0.3"
# Terminal colors
colored = "3.1.1"
# Regex support
regex = "1.11.3"
# Error handling
anyhow = "1.0"
thiserror = "2.0"
# Network utilities
socket2 = "0.6"
# System utilities
hostname = "0.4"
chrono = { version = "0.4", features = ["serde"] }
# Audio playback (optional, Windows only)
rodio = { version = "0.21", optional = true }
# Lazy static for global state
lazy_static = "1.4"
# Interactive prompts
inquire = "0.9"
# Directory walking
walkdir = "2.5"
# Rhai scripting engine
rhai = { version = "1.19", features = ["sync"] }
# CLI argument parsing
clap = { version = "4", features = ["derive"] }
# Home directory detection
dirs-next = "2.0"
# URL encoding
urlencoding = "2.1"
# Ed25519 signing for QWeather JWT auth
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
# SSH key parsing
ssh-key = { version = "0.6", features = ["ed25519"] }
# Ctrl+C handler
ctrlc = "3.4"

[features]
default = ["audio"]
audio = ["rodio"]

[target.'cfg(unix)'.dependencies]
# Unix system calls
nix = { version = "0.29", features = ["user"] }

[target.'cfg(windows)'.dependencies]
# Windows API for session monitoring
windows = { version = "0.62", features = [
    "Win32_System_RemoteDesktop",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_NetworkManagement_NetManagement",
    "Win32_System_WindowsProgramming"
] }

[profile.release]
opt-level = 3
lto = true
strip = true
